# quantlab-alpha-zerocost

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  enhanced_quant_coding_agent_prompt.txt  pyproject.toml  quant_ml_agent_commands.md
.omx/state/: notify-fallback-authority-owner.json  update-check.json
configs/: alpha.yaml  alpha_5m.yaml  alpha_eq.yaml  alpha_fast.yaml  backtest_eq.yaml  brokers.yaml  eq_focused_basket.yaml  exec.yaml  feeds.yaml  governor.yaml  governor_balanced.yaml  governor_coder15b.yaml  governor_fast.yaml  paper_sim.yaml  promotion.yaml  risk.yaml  signal_research.yaml  stack.yaml  validation.yaml
configs/backtests/: smoke.yaml
configs/signal_research_profiles/: crypto.yaml  futures_proxy.yaml  nasdaq.yaml  sp500.yaml
docs/research/: 2026-05-30-PAID-DATA-ACQUISITION-RECOMMENDATION.md  2026-05-30-ZERO-COST-CONSTRAINT.md  2026-05-31-MODEL-AND-BACKTEST-INVENTORY.md  (+9 more)
manifests/: datasets.yaml  kaggle.yaml  models.yaml  papers.yaml
reports/: 2026-05-30-PROGRAM-REVIEW-DATA-CONSTRAINT.md  2026-06-02-COMPETITIVE-LANDSCAPE-PUBLIC-QUANT.md  alpha_optuna_lgb_clean.json  equity_hf_dataset_loop_20260524-100931.md  equity_hf_dataset_loop_20260524-101230.md  equity_hf_dataset_loop_20260524-101306.md  equity_hf_dataset_loop_20260524-102420.md  equity_hf_dataset_loop_20260524-102441.md  equity_signal_backtest_20260523-202904.md  equity_walk_forward_retrain_20260523-215652.md  jane_street_signal_backtest_20260523-211146.md  orderbook_microstructure_benchmark_20260524-110854.md  orderbook_microstructure_benchmark_20260524-201858.md  orderbook_microstructure_benchmark_20260524-203953.md  orderbook_microstructure_benchmark_20260524-210406.md  orderbook_microstructure_benchmark_20260525-162557.md  strategy_benchmark_sp_nasdaq_2yr.md
scripts/: alpha_eval_holdout_clean.py  alpha_extract_meta_features.py  alpha_ood_numerai.py  alpha_optuna_search.py  alpha_s1_success_gate.py  alpha_train_s1.py  alpha_train_s1_streaming.py  audit_event_timestamps.py  audit_funding_carry_alignment.py  audit_funding_carry_data.py  audit_microstructure_data.py  audit_replay_check.py  audit_sharadar_data.py  backtest_run.py  backtest_s1_eq.py  backtest_signal_research_meta_label_profiles.py  build_edgar_10q_audit.py  build_equity_return_audit.py  build_event_calendar.py  build_futures_data_audit.py  build_news_sentiment_audit.py  build_options_iv_audit.py  build_zero_cost_data_audit.py  check_readme_links.py  check_readme_math.py  crypto_gresearch_signal_search.py  crypto_strategy_research_loop.py  dedupe_and_verify.py  download_hf_artifacts.py  download_kaggle_artifacts.py  download_papers.py  equity_hf_dataset_loop.py  equity_signal_backtest.py  equity_walk_forward_train.py  explore_massive_flatfiles.py  fetch_signal_research_data.py  generate_promotion_report.py  governor_build_indexes.py  governor_lora_dataset.py  governor_lora_label.py  (+51 more)
tests/: conftest.py  test_alpha_adversarial.py  test_alpha_cv.py  test_alpha_exceptions.py  test_alpha_features.py  test_alpha_inference.py  test_alpha_io.py  test_alpha_meta_features.py  test_alpha_metrics.py  test_alpha_models_catboost.py  test_alpha_models_lightgbm.py  test_alpha_models_mlp.py  test_alpha_models_ridge.py  test_alpha_models_sequence.py  test_alpha_models_xgboost.py  test_alpha_persistence.py  test_alpha_registry.py  test_alpha_stacking.py  test_alpha_training.py  test_backtest_metrics.py  test_backtest_report.py  test_backtest_runner.py  test_backtest_strategy.py  test_brokers_alpaca_paper.py  test_brokers_binance_testnet.py  test_brokers_capabilities.py  test_brokers_fill_model.py  test_brokers_null_broker.py  test_brokers_order_types.py  test_budget.py  test_check_readme_links.py  test_check_readme_math.py  test_crypto_gresearch.py  test_crypto_research_loop.py  test_dedupe_and_verify.py  test_equity_dataset_loop.py  test_equity_signal_backtest.py  test_equity_walk_forward.py  test_execution_audit.py  test_execution_configs.py  (+52 more)
(+652 files in other folders)
