[project]
name = "quant-research-stack"
version = "0.1.0"
description = "Local quantitative finance dataset, model, and paper-corpus workspace."
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.0",
    "datasets>=3.0.0",
    "duckdb>=1.0.0",
    "faiss-cpu>=1.8.0",
    "huggingface-hub>=0.30.0",
    "kaggle>=1.6.0",
    "lightgbm>=4.5.0",
    "llama-cpp-python>=0.3.0",
    "numpy>=1.26.0",
    "optuna>=3.6.0",
    "pandas>=2.2.0",
    "peft>=0.12.0",
    "polars>=1.6.0",
    "pyarrow>=16.0.0",
    "pypdf>=4.3.0",
    "pyyaml>=6.0.1",
    "rank-bm25>=0.2.2",
    "requests>=2.32.0",
    "rich>=13.7.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=3.0.0",
    "tqdm>=4.66.0",
    "xgboost>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
llm = [
    "torch>=2.3.0",
    "transformers>=4.42.0",
    "accelerate>=0.30.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not governor_slow'"
markers = ["governor_slow: integration tests that load LLM models (skipped by default)"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
